# react-native-tirl-validator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package-lock.json  package.json  tirl-validator.podspec  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: main.yml  npm-publish.yml  release-package.yml  release-please.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/tirlvalidator/: TirlValidatorModule.java  TirlValidatorPackage.java
cpp/: libzortag.h  stb_image.h  tirl-validator.cpp  tirl-validator.h
example/: app.json  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: File.swift  Podfile
example/ios/TirlValidatorExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TirlValidatorExample.xcodeproj/: project.pbxproj
example/ios/TirlValidatorExample.xcodeproj/xcshareddata/xcschemes/: TirlValidatorExample.xcscheme
example/ios/TirlValidatorExampleTests/: TirlValidatorExampleTests.m
example/src/: App.tsx
ios/: TirlValidator.h  TirlValidator.mm
ios/TirlValidator.xcodeproj/: project.pbxproj
src/: index.ts  index.tsx
src/__tests__/: index.test.ts
src/__tests__/modules/: ceramic.test.ts  errors.test.ts  native.test.ts
src/constants/: ceramicRuntime.js  queries.ts
src/interfaces/: errors.ts  native.ts
src/modules/: ceramic.ts  errors.ts  native.ts
(+10 files in other folders)
